--- a/roles/app/tasks/03-reboot.yaml
+++ b/roles/app/tasks/03-reboot.yaml
@@ -1,5 +1,12 @@
 ---
 
+- name: disable configuration service
+  systemd:
+    name: initial-configuration
+    enabled: no
+    masked: yes
+  become: yes
+  
 - name: reboot
   reboot:
   become: yes
